---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: ????
  Info:
    - Remove the bar from the factory inventory
    - Allow the crafter a & b in space
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025. 08. 06
  Info:
    - Support fluid ingredients
    - Support filtering output inserters/loaders on the main product with copy paste
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025. 08. 04
  Info:
    - Add mod-data blacklist for recipe names
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2025. 07. 22
  Info:
    - Added experimental FilterHelper support (check their open pull requests)
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025. 07. 22
  Info:
    - Fix ingredients lower than 1 per minute not being requested by chests
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025. 06. 27
  Info:
    - Fix gui unifier compatibility
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025. 06. 18
  Info:
    - Fix item ingredient rounding error
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025. 06. 18
  Info:
    - Fix trying to top up with the wrong count
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025. 06. 18
  Info:
    - Floating point debug
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025. 06. 17
  Info: