@@ -3,7 +3,7 @@
     "title": "Magic huts",
     "description": "Can export your Factory Planner factory into a convenient all-in-one building.",
 
-    "version": "1.2.0",
+    "version": "1.2.1",
     "author": "Quezler",
     "factorio_version": "2.0",
 
